tests/NormalTests/paczka1/fuzzy1/90427229.err
Error in line 10: o0SH8wLr A700 21,4
Error in line 39: o0SH8wLr S915 52,5
